# secrets_rs

./: .gitignore  Cargo.toml  docker-compose.yaml  makefile
sql/v1/: groups.sql  secret_additional_fields.sql  secrets.sql  shared_secrets.sql  users.sql  vault.sql
src/: main.rs
src/response/: response.rs
src/service_discovery/: db_service.rs  mod.rs  service_discovery.rs
src/user/: user.rs
